--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "bootstrap": "^5.1.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
