--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
